# ClipSync

./: .gitignore  CLIPSYNC_PLAN.md  CLIPSYNC_V2_PLAN.md  LITECLIPSYNC_PLAN.md  LITECLIPSYNC_V2_PLAN.md  PLAN.md  PROJECT_SUMMARY.md  README.md
.omo/drafts/: webdav-support.md
.omo/run-continuation/: ses_149309818ffexbJlTWmQ3mq9VN.json
clipsync-android/: settings.gradle.kts
clipsync-android/app/: build.gradle.kts
clipsync-android/app/src/main/: AndroidManifest.xml
clipsync-android/app/src/main/aidl/com/clipsync/app/: IClipSyncService.aidl
clipsync-android/app/src/main/java/com/clipsync/app/: ClipSyncApp.kt  ClipSyncUserService.kt  ClipboardShell.kt  Config.kt  HttpApi.kt  MainActivity.kt  T.kt  (+7 more)
clipsync-android/app/src/main/java/rikka/shizuku/: ShizukuProvider.kt
clipsync-android/app/src/main/res/xml/: file_paths.xml
clipsync-server/: Cargo.toml
clipsync-server/src/: config.rs  db.rs  main.rs  protocol.rs
clipsync-server/src/routes/: file.rs  health.rs  sync_profile.rs
clipsync-server/src/ws/: handler.rs
clipsync-windows/: Cargo.toml
clipsync-windows/src/: client.rs  clipboard.rs  config.rs  main.rs  protocol.rs  sync.rs
docs/: README_EN.md
liteclipsync-android/: settings.gradle.kts
liteclipsync-android/app/: build.gradle.kts
liteclipsync-android/app/src/main/: AndroidManifest.xml
liteclipsync-android/app/src/main/java/rikka/shizuku/: ShizukuProvider.kt
liteclipsync-android/app/src/main/res/values/: strings.xml  themes.xml
liteclipsync-android/app/src/main/res/xml/: file_paths.xml
liteclipsync-server/: Cargo.toml
liteclipsync-server/src/: auth.rs  config.rs  db.rs  main.rs  protocol.rs
liteclipsync-server/src/routes/: file.rs  health.rs  mod.rs
liteclipsync-server/src/ws/: handler.rs  session.rs
liteclipsync-windows/: Cargo.toml
liteclipsync-windows/src/: client.rs  clipboard.rs  command.rs  config.rs  main.rs  protocol.rs  sync.rs
(+15 files in other folders)
